--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="./assets/index.b28a9b8d.js"></script>
-    <link rel="stylesheet" href="./assets/index.16e3b472.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Pâtisserie Quizz</title>
+    <script type="module" crossorigin src="./assets/index.ecc01c7c.js"></script>
+    <link rel="stylesheet" href="./assets/index.35dcd760.css">
   </head>
   <body>
     <div id="root"></div>
